crates/arklib_meta/tests/ui/diagnostic_wrong_return.rs
use arklib_meta::diagnostic;

pub struct TaskVector;

#[diagnostic]
pub fn my_diag() -> TaskVector {
    TaskVector
}

fn main() {}
